--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1 id="heading">Age Calculator</h1>
   <div class="calculator-container">  <label for="input">Enter Your Total Years:</label>
-    <input id="input" type="number" placeholder="e.g 25" required>  <button type="button" id="btn" onclick="Get()">Get</button>
+    <input id="input" type="number" placeholder="e.g 25" required>
+      <button type="button" id="btn" onclick="GetValue()">Get</button>
 
     <div class="results">  <p><span id="t-days"></span> </p>
       <p><span id="t-hours"></span> </p>
@@ -17,6 +18,7 @@
       <p><span id="t-seconds"></span> </p>
     </div>
   </div>
+  
 
   <script src="./index.js"></script>
 </body>
